# mpc_control_ros

./: README.md
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/motion_capture/: nokovStamped.h
devel/lib/dynaplaning/: dyanamic_planning_node  result.txt  test1
devel/lib/leader_follower/: create_car_path  create_car_path_nokov  follower_node
devel/lib/motion_capture/: ROSClient
devel/lib/mpc_control/: bag_to_path  mpc  mpc_control_node  mpc_control_node_fix  mpc_control_node_nokov  mpc_test  odom_to_path  path_publisher  path_publisher_nokov  pid_control_node  read_bag  show_car_in_stage
devel/lib/pkgconfig/: dynaplaning.pc  leader_follower.pc  mpc_control.pc  (+2 more)
devel_isolated/mpc_control/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
src/: mpc原理.md  无标题Markdown.md
src/dynaplaning/: CMakeLists.txt
src/leader_follower/: CMakeLists.txt  package.xml
src/mpc_control/: CMakeLists.txt
src/nav_msgs111/: CMakeLists.txt  package.xml
src/ros_image_transport/: CMakeLists.txt  package.xml
src/serial_stm32/: CMakeLists.txt  package.xml
src/stplanner/: CMakeLists.txt  package.xml
src/stplanner/include/: main.h
src/stplanner/src/: calc_path_length_and_map_between_point_and_s.cpp  calc_speed_planning_start_condition.cpp  generate_convex_space.cpp  generate_st_graph.cpp  increase_st_point_count.cpp  interp1.cpp  main.cpp  osqp-eigen.cpp  path_and_speed_merge.cpp  speed_decision_with_dynamic_planning.cpp  speed_planning_with_quadratic_programming.cpp  stitch.cpp  stplanner.cpp
src/wheeltec_joy_control/: CMakeLists.txt
(+107 files in other folders)
